14 February 2014: Matthijs
- Set NSEC3 on empty non-terminals to unsigned delegations: To be compatible
  with validators that do not implement RFC 5155 Errata 3441 [OPENDNSSEC-549].

22 January 2014: Matthijs
- OPENDNSSEC-526: Backup xfrd state.

13 January 2014: Matthijs
- OPENDNSSEC-529: Fix a bug where the zone transfer was not stored on disk
  completely yet, and the restore failed.

18 December 2013: Matthijs
- Merged OPENDNSSEC-515 from 1.3 branch.

16 December 2013: Matthijs
- SUPPORT-101: If notify_acquired, then zone transfer in progress: don't
  forward notify to xfr handler.

15 November 2013: Matthijs
- Fix task rescheduling for OPENDNSSEC-467.

14 November 2013: Matthijs
- OPENDNSSEC-435: Fix a memleak when cleaning up signatures.

14 October 2013: Matthijs
- OPENDNSSEC-466: Signer create bad TSIG when falling back to AXFR.

11 October 2013: Matthijs
- OPENDNSSEC-467: After ods-signer clear, signer used inbound serial

9 October 2013: Matthijs
- SUPPORT-72: Improve logging when serial cannot be incremented [OPENDNSSEC-461].
- OPENDNSSEC-330: NSEC3PARAM TTL configurable in kasp.
- OPENDNSSEC-463: Duration PT0S is not printed correctly.

20 August 2013: Matthijs
- SUPPORT-71: Signer crashes on a double free in case of a HSM connection
  problem [OPENDNSSEC-444].
- OPENDNSSEC-330: Signer Engine: NSEC3PARAM TTL is default 0 again, to
  keep similarity with BIND9. Decided it needs a configuration option.

24 July 2013: Matthijs
- OPENDNSSEC-330: Signer Engine: NSEC3PARAM TTL is default TTL again, to
  prevent bad caching effects on resolvers.

23 July 2013: Matthijs
- Set AA bit in SOA response (fix daily tests).
- Better log msg bad rcode notify

10 July 2013: Matthijs
- Signer response to SOA queries from file, instead of memory. Makes
  response non-blocking [OPENDNSSEC-424].

5 July 2013: Matthijs
- Fix invalid free in case of adding a new zone with DNS outbound adapters
  and NotifyCommand (thanks Ville Mattila).

3 July 2013: Matthijs